force-app/main/default/objects/Event_Registration__c/Event_Registration__c.object-meta.xml
<CustomObject>
    <label>Event Registration</label>
    <nameField>
        <displayFormat>Event No - {0000}</displayFormat>
        <label>Event No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>