force-app/main/default/objects/Event_Registration__c/fields/Follow_Up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up Needed</label>
    <type>Checkbox</type>
</CustomField>