force-app/main/default/objects/Event_Registration__c/listViews/Report_Abuse_Queue_Event_Registration.listView-meta.xml
<ListView>
    <fullName>Report_Abuse_Queue_Event_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Report Abuse Queue</label>
    <queue>Report_Abuse_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>