force-app/main/default/objects/Event_Registration__c/listViews/User_Support_Queue_Event_Registration.listView-meta.xml
<ListView>
    <fullName>User_Support_Queue_Event_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>User Support Queue</label>
    <queue>User_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>